--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -48,7 +48,7 @@ body {
 }
 
 html {
-  font-family: 'Jua', sans-serif;
+  font-family: 'Cute Font', cursive;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -150,7 +150,7 @@ abbr[title] {
 /* Code */
 code,
 pre {
-  font-family: 'Jua', sans-serif;
+  font-family: 'Cute Font', cursive;
 }
 code {
   padding: .25em .5em;
@@ -190,7 +190,7 @@ pre code {
 
 /* Gist via GitHub Pages */
 .gist .gist-file {
-  font-family: 'Jua', sans-serif;
+  font-family: 'Cute Font', cursive;
 }
 .gist .markdown-body {
   padding: 15px;
@@ -389,7 +389,7 @@ tbody tr:nth-child(odd) th {
   overflow: hidden; /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: 'Jua', sans-serif;
+  font-family: 'Cute Font', cursive;
   color: #ccc;
   text-align: center;
 }
