--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,24 +10,21 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.title == 'Home' %} active{% endif %}" href="{{ '/' | absolute_url }}">Home</a>
-
-    {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-    {% endcomment %}
-
-    {% assign pages_list = site.pages | sort:"url" %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url | absolute_url }}">{{ node.title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <div>
+      <div class="sidebar-nav-item">Category</div>
+      <nav class="content-ul">
+        {% for category in site.categories %}
+        <a href="{{ root_url }}/{{ site.category_dir }}#{{ category | first }}"
+           class="sidebar-nav-item pl-3rem">
+                              <span class="name">
+                                  {{ category | first }}
+                              </span>
+          <span class="badge">{{ category | last | size }}</span>
+        </a>
+        {% endfor %}
+      </nav>
+    </div>
+    <span class="sidebar-nav-item">Currently v{{ site.version }} | {{site.categories}}</span>
   </nav>
 
   <div class="sidebar-item">
