--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,6 +5,6 @@ li h3 {
 }
 
 pre code {
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 1rem;
 }
