--- a/_sass/monophase/_highlight-light copy.scss
+++ b/_sass/monophase/_highlight-light copy.scss
@@ -63,11 +63,11 @@
   color: #aa0000;
 }
 .highlight .kc {
-  color: rgb(253, 93, 162);
+  color: #000000;
   font-weight: bold;
 }
 .highlight .kd {
-  color: rgb(253, 93, 162);
+  color: #000000;
   font-weight: bold;
 }
 .highlight .kn {
@@ -83,30 +83,30 @@
   font-weight: bold;
 }
 .highlight .kt {
-  color: rgb(94, 216, 255);
+  color: #445588;
   font-weight: bold;
 }
 .highlight .k, .highlight .kv {
-  color: rgb(253, 93, 162);
+  color: #000000;
   font-weight: bold;
 }
 .highlight .mf {
-  color: rgb(208, 192, 104);
+  color: #009999;
 }
 .highlight .mh {
-  color: rgb(208, 192, 104);
+  color: #009999;
 }
 .highlight .il {
-  color: rgb(208, 192, 104);
+  color: #009999;
 }
 .highlight .mi {
-  color: rgb(208, 192, 104);
+  color: #009999;
 }
 .highlight .mo {
-  color: rgb(208, 192, 104);
+  color: #009999;
 }
 .highlight .m, .highlight .mb, .highlight .mx {
-  color: rgb(208, 192, 104);
+  color: #009999;
 }
 .highlight .sa {
   color: #000000;
@@ -146,7 +146,7 @@
   color: #990073;
 }
 .highlight .s, .highlight .dl {
-  color: rgb(248, 104, 92);
+  color: #d14;
 }
 .highlight .na {
   color: #008080;
@@ -176,7 +176,7 @@
   font-weight: bold;
 }
 .highlight .nf, .highlight .fm {
-  color: rgb(66, 160, 193);
+  color: #990000;
   font-weight: bold;
 }
 .highlight .nl {
@@ -198,31 +198,20 @@
 .highlight .vi {
   color: #008080;
 }
-.highlight .vm {
-  color: rgb(66, 160, 193);
-}
-.highlight .nv {
-  color: rgb(250, 250, 250);
+.highlight .nv, .highlight .vm {
+  color: #008080;
 }
 .highlight .ow {
   color: #000000;
   font-weight: bold;
 }
 .highlight .o {
-  color: rgb(250, 250, 250);
+  color: #000000;
   font-weight: bold;
 }
 .highlight .w {
   color: #bbbbbb;
 }
-
-.highlight .p {
-  color: rgb(250, 250, 250);
-}
-
-.highlight .n {
-  color: rgb(250, 250, 250);
-}
 .highlight {
-  background-color: rgb(31,31,36);
+  background-color: #f8f8f8;
 }
