--- a/_sass/monophase/_highlight-light.scss
+++ b/_sass/monophase/_highlight-light.scss
@@ -10,7 +10,7 @@
 }
 .highlight .cp {
   color: #999999;
-  font-weight: bold;
+
 }
 .highlight .c1 {
   color: #999988;
@@ -18,7 +18,7 @@
 }
 .highlight .cs {
   color: #999999;
-  font-weight: bold;
+
   font-style: italic;
 }
 .highlight .c, .highlight .ch, .highlight .cd, .highlight .cpf {
@@ -54,7 +54,7 @@
   color: #555555;
 }
 .highlight .gs {
-  font-weight: bold;
+
 }
 .highlight .gu {
   color: #aaaaaa;
@@ -65,26 +65,28 @@
 .highlight .kc {
   color: rgb(253, 93, 162);
   font-weight: bold;
+
 }
 .highlight .kd {
   color: rgb(253, 93, 162);
   font-weight: bold;
+
 }
 .highlight .kn {
   color: #000000;
-  font-weight: bold;
+
 }
 .highlight .kp {
   color: #000000;
-  font-weight: bold;
+
 }
 .highlight .kr {
   color: #000000;
-  font-weight: bold;
+
 }
 .highlight .kt {
   color: rgb(94, 216, 255);
-  font-weight: bold;
+
 }
 .highlight .k, .highlight .kv {
   color: rgb(253, 93, 162);
@@ -110,7 +112,7 @@
 }
 .highlight .sa {
   color: #000000;
-  font-weight: bold;
+
 }
 .highlight .sb {
   color: #d14;
@@ -159,29 +161,29 @@
 }
 .highlight .nc {
   color: #445588;
-  font-weight: bold;
+
 }
 .highlight .no {
   color: #008080;
 }
 .highlight .nd {
   color: #3c5d5d;
-  font-weight: bold;
+
 }
 .highlight .ni {
   color: #800080;
 }
 .highlight .ne {
   color: #990000;
-  font-weight: bold;
+
 }
 .highlight .nf, .highlight .fm {
   color: rgb(66, 160, 193);
-  font-weight: bold;
+
 }
 .highlight .nl {
   color: #990000;
-  font-weight: bold;
+
 }
 .highlight .nn {
   color: #555555;
@@ -206,11 +208,11 @@
 }
 .highlight .ow {
   color: #000000;
-  font-weight: bold;
+
 }
 .highlight .o {
   color: rgb(250, 250, 250);
-  font-weight: bold;
+
 }
 .highlight .w {
   color: #bbbbbb;
@@ -225,4 +227,5 @@
 }
 .highlight {
   background-color: rgb(31,31,36);
-}
+  font-size: 14px;
+} 
