update utterance for comment

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -84,3 +84,10 @@ layout: default
     </ul>
   </aside>
 {% endif %}
+<script src="https://utteranc.es/client.js"
+        repo="hoonv/hoonv.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
