--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,5 @@
   <script async src="https://use.fontawesome.com/releases/v5.0.12/js/all.js"></script>
   
   {% include custom-head.html %}
+  <meta name="google-site-verification" content="gDgSOIqftdFIiYyFzUv4c-rMpt5iIBeO5K9PyjSJP6A" />
 </head>
