--- a/_sass/monophase/_highlight-light.scss
+++ b/_sass/monophase/_highlight-light.scss
@@ -26,8 +26,7 @@
   font-style: italic;
 }
 .highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2;
+  color: rgb(250, 250, 250);
 }
 .highlight .gd {
   color: #000000;
